# src/modules/wokrspaceSetup/infrastructure/http/routes/user.ts
@@ -1,18 +1,176 @@
 import { Router } from "hyper-express";
 import logger from "../../../../../shared/logger";
-import { CreateUserCommand } from "../../../application/commands/Commands";
+import {
+  CreateUserCommand,
+  LoginUserCommand,
+} from "../../../application/commands/Commands";
 import ValidationError from "../../../../../shared/Errors/ValidationError";
 
 const userRouter = new Router();
 
+/**
+ * @swagger
+ * /user/login:
+ *   post:
+ *     summary: Log in a user
+ *     description: Authenticates a user with their username, password, and realmName.
+ *     tags:
+ *       - User
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               username:
+ *                 type: string
+ *                 example: user123
+ *               password:
+ *                 type: string
+ *                 example: password123
+ *               realmName:
+ *                 type: string
+ *                 example: exampleRealm
+ *     responses:
+ *       201:
+ *         description: Successfully authenticated
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 accessToken:
+ *                   type: string
+ *                   example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+ *                 refreshToken:
+ *                   type: string
+ *                   example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+ *       400:
+ *         description: Bad request
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: Validation error
+ */
 
+userRouter.post("/login", async (req, res) => {
+  try {
+    const data = await req.json();
+    const app = req.locals.app;
+
+    console.log(data);
+    logger.info(data);
+
+    const tokens = await app
+      .getCommandBus()
+      .execute(
+        new LoginUserCommand(data.username, data.password, data.realmName)
+      );
+
+    logger.info(tokens);
+    res.status(201).json(tokens);
+  } catch (err: any) {
+    logger.error(err.message);
+    if (err instanceof ValidationError) {
+      res.status(400).json({ message: err.errors });
+    } else {
+      res.status(400).json({ message: err.message });
+    }
+  }
+});
+
+/**
+ * @swagger
+ * paths:
+ *  /user:
+ *    post:
+ *      summary: Create a new user
+ *      description: Endpoint to create a new user.
+ *      operationId: createUser
+ *      requestBody:
+ *        description: Request payload for creating a new user
+ *        required: true
+ *        content:
+ *          application/json:
+ *            schema:
+ *              type: object
+ *              properties:
+ *                realmName:
+ *                  type: string
+ *                  description: The name of the user's realm
+ *                username:
+ *                  type: string
+ *                  description: The user's username
+ *                firstName:
+ *                  type: string
+ *                  description: The user's first name
+ *                lastName:
+ *                  type: string
+ *                  description: The user's last name
+ *                email:
+ *                  type: string
+ *                  format: email
+ *                  description: The user's email address
+ *                password:
+ *                  type: string
+ *                  description: The user's password
+ *              required:
+ *                - realmName
+ *                - username
+ *                - firstName
+ *                - lastName
+ *                - email
+ *                - password
+ *      responses:
+ *        '201':
+ *          description: User created successfully
+ *          content:
+ *            application/json:
+ *              schema:
+ *                type: object
+ *                properties:
+ *                  message:
+ *                    type: string
+ *                    example: 'User created'
+ *        '400':
+ *          description: Bad Request
+ *          content:
+ *            application/json:
+ *              schema:
+ *                type: object
+ *                properties:
+ *                  message:
+ *                    type: string
+ *                    examples:
+ *                      validationError:
+ *                        value: 'validation Error'
+ *                      otherError:
+ *                        value: 'Error message'
+ *        '500':
+ *          description: Internal Server Error
+ *          content:
+ *            application/json:
+ *              schema:
+ *                type: object
+ *                properties:
+ *                  message:
+ *                    type: string
+ *                    example: 'Server error'
+ *
+ */
 
 userRouter.post("/", async (req, res) => {
   try {
     const data = await req.json();
     const app = req.locals.app;
 
- 
+    logger.info(data.realmName);
+
     await app
       .getCommandBus()
       .execute(
@@ -31,7 +189,7 @@ userRouter.post("/", async (req, res) => {
   } catch (err: any) {
     logger.error(err.message);
     if (err instanceof ValidationError) {
-      res.status(400).json({ message: "validation Error" });
+      res.status(400).json({ message: err.errors });
     } else {
       res.status(400).json({ message: err.message });
     }
